# selenium_python

./: .env  .gitignore  README.md  pyproject.toml
data/: checkout_data.json  product_data.json
pages/: cart_page.py  checkout_page.py  home_page.py  product_page.py
test/: conftest.py  test.py
utility/: utility.py
